# seldon-trial-evaluation

./: Makefile  README.md  pyproject.toml
docker/: Dockerfile
notebooks/generic/: generic_workshop.ipynb
notebooks/retinanet-pytorch/: test.py
